# stardate

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
docs/: github_stardata.json  index.html  script.js  styles.css
stardate/: github_birthdays_sync.py
tests/test_github_birthdays_sync/: test_download_file.py  test_file_exists.py  test_filter_columns.py  test_get_remote_file_date_github_api.py
